--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,61 @@
 All colors MUST be HSL.
 */
 
+
+
+/* Hanuman */
+@font-face {
+  font-family: 'Hanuman';
+  src: url('/fonts/Hanuman-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Hanuman';
+  src: url('/fonts/Hanuman-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+/* Moul */
+@font-face {
+  font-family: 'Moul';
+  src: url('/fonts/Moul-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+/* Bayon */
+@font-face {
+  font-family: 'Bayon';
+  src: url('/fonts/Bayon-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+@media (max-width: 600px) {
+  html, body {
+    font-size: 14px;  /* smaller text */
+    height: auto;     /* let content flow naturally */
+  }
+
+  .container {
+    padding: 10px;
+  }
+}
+
+
+
 @layer base {
   :root {
     --background: 224 71% 4%;
     --foreground: 45 100% 85%;
+
+    --font-moul: Moul-Regular, "sans-serif"; 
+
+
 
     --card: 224 71% 4%;
     --card-foreground: 45 100% 85%;
@@ -131,12 +182,28 @@ All colors MUST be HSL.
   }
   
   .fade-in {
-    animation: fadeIn 1s ease-in-out;
+    animation: fadeIn 1s ease-in-out, transform 0.8s ease-out;
+     
   }
+
   
   @keyframes fadeIn {
     from { opacity: 0; transform: translateY(20px); }
     to { opacity: 1; transform: translateY(0); }
+  }
+
+
+  @keyframes pluse-60s {
+    0%, 100% {
+      opacity: 1;
+    }
+    50% {
+      opacity: .5;
+    }
+  }
+
+  .animate-pulse-60s {
+  animation: pulse-60s 60s ease-in-out infinite;
   }
   
   .wedding-text {
