--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,16 @@ All colors MUST be HSL.
   font-style: normal;
 }
 
+/* Koulen */
+@font-face {
+  font-family: 'Koulen';
+  src: url('/fonts/Koulen-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+
 
 @media (max-width: 600px) {
   html, body {
@@ -216,8 +226,5 @@ All colors MUST be HSL.
   .wedding-glow {
     box-shadow: 0 0 30px hsl(var(--wedding-gold) / 0.3);
   }
-
-  #root {
-  min-height: 100vh;
-}
+  
 }
